[project]
name = "chatbot-pinecone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=0.31.0",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-groq>=0.3.7",
    "langchain-pinecone>=0.2.11",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pinecone>=7.3.0",
    "pinecone-client>=6.0.0",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.11.0",
    "unstructured>=0.18.13",
]
